GUI-12734 fix alignment of parameter popup

--- a/assets/stylesheets/less/partials/dag.less
+++ b/assets/stylesheets/less/partials/dag.less
@@ -412,7 +412,7 @@ html.firefox, html.microsoft {
         display: inline-block;
         float: left;
         margin-top: 2px;
-        min-width: ~"calc(100% - 300px)";
+        min-width: ~"calc(100% - 400px)";
 
         .tableName {
             display: inline-block;
